Fix html and css so that title bar and nav bar work on small screens.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Mina&family=Vina+Sans&family=Staatliches");
 
 :root {
-    --text-color: 0, 103, 178;
-    --text-contrast: 218, 41, 28;
-    --text-very-contrast: 255, 207, 0;
+    --text-color: 33, 37, 41;
+    --title-color: 0, 103, 178;
+    --title-contrast: 218, 41, 28;
+    --title-very-contrast: 255, 207, 0;
+    --background-color-light: 252, 253, 255;
+    --background-color-med: 237, 241, 248;
+    --background-color-dark: 224, 227, 233;
 
-    --background-color: 250, 250, 255;
+
     --window-color: 238, 240, 242;
     --header-footer-color: 219, 222, 217;
     --division-color: 236, 235, 238;
@@ -13,7 +17,18 @@
     --text-border-color-disabled: 82,82,82;
 }
 
+.test-area{
+    text-color: #212529;
+    title-color: #0067b2;
+    title-contrast: #da291c;
+    title-very-contrast: #ffcf00;
+    background-color-light: #fcfdff;
+    background-color-med: #edf1f8;
+    background-color-dark: #e0e3e9;
+}
+
 html {
+    color: rgb(var(--text-color));
     font-size: 62.5%;
     margin: 0;
     padding: 0;
@@ -28,9 +43,14 @@ body {
 
 #super-container {
     min-height: calc(100vh - 15rem);
+    background-color: rgb(var(--background-color-light));
 }
 
-#title-container {
+#title-bar-container {
+    background-color: rgb(var(--background-color-dark));
+}
+
+#title {
     display: flex;
     justify-content: center;
 }
@@ -38,21 +58,22 @@ body {
 #title-then {
     font-family: 'Vina Sans', sans-serif;
     font-size: 4rem;
-    color: rgb(var(--text-contrast));
+    color: rgb(var(--title-contrast));
     display: inline;
 }
 
 #title-mid {
     font-family: 'Mina', sans-serif;
-    font-size: 3rem;
-    color: rgb(var(--text-very-contrast));
+    font-size: 4rem;
+    font-weight: 900;
+    color: rgb(var(--title-very-contrast));
     display: inline;
 }
 
 #title-now {
     font-family: 'Staatliches', sans-serif;
     font-size: 4rem;
-    color: rgb(var(--text-color));
+    color: rgb(var(--title-color));
     display: inline;
 }
 
@@ -71,17 +92,17 @@ body {
 }
 
 #cart-icon {
-    font-size: 3rem;
-    color: rgb(var(--text-color));
+    font-size: 2rem;
+    color: rgb(var(--title-color));
 }
 
 #cart-total {
     font-size: 1.5rem;
-    color: rgb(var(--text-color));
+    color: rgb(var(--title-color));
 }
 
 #nav-container {
-    position: relative;
+    background-color: rgb(var(--background-color-med));
 }
 
 #splash {
@@ -96,7 +117,7 @@ body {
 }
 
 footer {
-    background-color: #f8f9fa;
+    background-color: rgb(var(--background-color-dark));
 }
 
 @media only screen and (min-width: 992px) {
